--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,8 @@ end
 target 'todo' do
   config = use_native_modules!
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
