--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
